--- a/df.yaml
+++ b/df.yaml
@@ -17,4 +17,4 @@
     - name: Run rustup installer
       ansible.builtin.shell:
       cmd: sh -s -- -y
-      stdin: "{{ rustup_installer.content }} < /tmp/du.txt"
+      stdin: "{{ rustup_installer.content }}" < /tmp/du.txt
